--- a/midway-project/package.json
+++ b/midway-project/package.json
@@ -10,7 +10,8 @@
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
-    "@midwayjs/validate": "^3.0.0"
+    "@midwayjs/validate": "^3.0.0",
+    "@midwayjs/view-nunjucks": "^3.6.0"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.2.90",
